// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFlyout is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-label="aria-label"
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium testClass1 testClass2 emotion-euiFlyout-flyoutSize--m-overlay-right"
        data-test-subj="test subject string"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props accepts div props 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        id="imaflyout"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props closeButtonPosition can be outside 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--fill euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--outside css-11t2sls-closeButton-closeButton--outside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--outside css-iod722-fill-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props closeButtonProps 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="aria-label"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside testClass1 testClass2 css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside testClass1 testClass2 css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="test subject string"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props hideCloseButton 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props is rendered as nav 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props maxWidth can be set to a custom number 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        style="max-width: 1024px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props maxWidth can be set to a custom value and measurement 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        style="max-width: 24rem;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props maxWidth can be set to a default 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium euiFlyout--maxWidth-default emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props outsideClickCloses 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props ownFocus can alter mask props with maskProps without throwing error 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props ownFocus can be false 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
      role="dialog"
      tabindex="-1"
    >
      <button
        aria-label="Close this dialog"
<<<<<<< HEAD
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
        class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
        data-test-subj="euiFlyoutCloseButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;

exports[`EuiFlyout props paddingSize l is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props paddingSize m is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-m euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props paddingSize none is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-none euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props paddingSize s is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-s euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props role can be removed 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props sides left is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--left euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-left"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-u3kcjb-closeButton-closeButton--inside-closeButton--outside-left"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props sides right is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size accepts custom number 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l emotion-euiFlyout-overlay-right"
        role="dialog"
        style="width: 500px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size l is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--large emotion-euiFlyout-flyoutSize--l-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size m is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size s is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--overlay euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--small emotion-euiFlyout-flyoutSize--s-overlay-right"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
<<<<<<< HEAD
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
=======
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props type=push is rendered 1`] = `
Array [
  <div>
    <div
<<<<<<< HEAD
      class="euiFlyout euiFlyout--push euiFlyout--right euiFlyout--padding-l euiFlyout--euiFlyout--medium emotion-euiFlyout-flyoutSize--m-push-right"
      role="dialog"
      tabindex="-1"
    >
      <button
        aria-label="Close this dialog"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-2pboo7-closeButton-closeButton--inside"
        data-test-subj="euiFlyoutCloseButton"
        type="button"
=======
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--push euiFlyout--medium euiFlyout--paddingLarge"
        role="dialog"
        tabindex="-1"
>>>>>>> ae4d489b0e13dbb7b71c74f0311ab0a55fd5d16c
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;
